<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_teori"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/latar"
    tools:context="com.kapak_merah.pidsim.Teori">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/judulZN"
                android:textColor="@android:color/black"
                android:textSize="24sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/kontenZN1a"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:id="@+id/textView" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/zn1" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ketZN1a"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@android:color/black" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/kontenZN1b"
                android:textSize="20sp"
                android:textColor="@android:color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/ketZN1b"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@android:color/black" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/zn2" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/kontenZN2a"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/zn3"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ketZN2a"
                android:gravity="center"
                android:textSize="12sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/kontenZN2b"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:src="@drawable/zn4"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ketZN2b"
                android:textSize="12sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/kontenZN2c"
                android:textSize="20sp"
                android:textColor="@android:color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/ketZN2c"
                android:textSize="12sp"
                android:textColor="@android:color/black"/>

            <ImageView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:src="@drawable/zn5"
                android:layout_gravity="center_horizontal"/>

        </LinearLayout>
    </ScrollView>

</LinearLayout>
