<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/latar_latar"
    tools:context="com.aldi_andika.pidsimrpm.About">

    <ImageView
        android:layout_width="200dp"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        android:src="@drawable/logo_dinotera"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/about"
        android:id="@+id/textView1"
        android:layout_gravity="center_vertical"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:textSize="14sp"
        android:textStyle="bold"
        android:gravity="center"
        android:text="@string/about2"
        android:id="@+id/textView2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/mail"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/textView3"
        android:layout_gravity="center_vertical"
        android:onClick="composeEmail"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/buttonhelp"
        android:layout_weight="2">
        <Button
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:id="@+id/help"
            android:background="@drawable/helpp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:gravity="bottom"/>

    </RelativeLayout>

</LinearLayout>
